Thu May 03 13:22:52 2001  George Lebl <jirka@5z.com>

	* gui/Makefile.am, gui/gdmconfig.desktop(.in), po/POTFILES.in,
	  po/*.po, configure.in, Makefile.am:  Add the usage of
	  xml-i18n-tools for the desktop file

Wed May 02 18:08:17 2001  George Lebl <jirka@5z.com>

	* gui/gdmconfig.glade: fix limits on the spinbuttons

	* gui/gdmconfig.c: Fix default linking, provide uniqueness checking
	  fix naming races, and generally make the whole session editor
	  actually work right.

Wed May 02 03:15:15 2001  George Lebl <jirka@5z.com>

	* daemon/slave.c: fix running of gdmconfig by setuid/gid to 0
	  and give an error dialog box if the configurator is not found

Wed May 02 01:44:36 2001  George Lebl <jirka@5z.com>

	* config/Gnome.in, config/Xsession: don't use bash -login, because we
	  have already ran a login shell which was the users login shell

	* config/gnomerc.in, daemon/slave.c: use exec to avoid running 2
	  unneeded shells.  Now if you log in there is no extra shell process
	  running.  This saves quite a bit of ram in fact since things like
	  bash eat up quite a bit of ram, and if the user doesn't use any
	  shells, none of it is shared.

	* daemon/slave.c:  Fix a doh! error in the last commit where I got
	  confused about which sessions I was talking about (gsm vs. gdm),
	  also a little bit of cleanup

Tue May 01 16:28:17 2001  George Lebl <jirka@5z.com>

	* daemon/gdm.c, daemon/gdm.h, daemon/slave.c, gui/gdmconfig.c,
	  gui/gdmlogin.c:  Make it possible to log in even if the sessions
	  directory is missing or empty.  Of course if that happens the
	  user gets a "you're an idiot and your setup's b0rk" warning dialog
	  (well not in those exact words)

Tue May 01 14:41:03 2001  George Lebl <jirka@5z.com>

	* gui/gdmconfig.c: instead of a define, read a
	  DOING_GDMCONFIG_DEVELOPMENT env var.

	* gui/gdmconfig.c, gui/gdmlogin.c: ignore sessions ending in .deleted
	  and .desc

	* gui/gdmconfig.c, gui/gdmlogin.c:  Session names ARE case sensitive