@@ -1,3 +1,10 @@
+Thu May 03 17:13:23 2001  George Lebl <jirka@5z.com>
+
+	* gui/gdmconfig.c, gui/gdmchooser.c:  Use DOING_GDM_DEVELOPMENT env
+	  var (scrap the old GDMCONFIG one for gdmconfig) and add actual
+	  useful messages when glade stuff fails (as it does in ximian
+	  packages now, but that makes a nice core file in those which sucks)
+
 Thu May 03 13:22:52 2001  George Lebl <jirka@5z.com>
 
 	* gui/Makefile.am, gui/gdmconfig.desktop(.in), po/POTFILES.in,
